adding an intgration test AuthServiceIntegrationTest